# TestQT

./: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  player.cpp  player.h  test2.pro  test2_en_US.ts
